--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Reserva de Hotel</title>
     <link rel="stylesheet" href="/css/estilos.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="estilos_habitaciones.css">
+    <link rel="stylesheet" href="/css/estilos.css">
 
 </head>
 <body>
